--- a/src/styles/2-layout/index.css
+++ b/src/styles/2-layout/index.css
@@ -1,3 +1,15 @@
+/* Import */
+
+@import url(/src/styles/1-base/2-general.css);
+
+/* Main */
+
+.main__intro {
+  background-color: var(--white);
+  text-align: center;
+  padding-top: 2rem;
+}
+
 .intro__title {
-  font-size: 3rem;
+   font-size: 3rem;
 }
